# YetBota-web

./: .gitignore  README.md  REST_API.md
backend/: .env.example  Dockerfile  (+3 more)
backend/ai-service/: Dockerfile  Dockerfile.render  Makefile  config.yaml  entrypoint.render.sh  pyproject.toml  requirements.txt
backend/ai-service/src/: main.py
backend/ai-service/src/application/: consult_assistant.py  errors.py  ingest_content.py  manage_conversation.py
backend/ai-service/src/domain/entities/: __init__.py  chat.py  comment.py  conversation.py  incoming_message.py  ingest.py  post.py  rag.py
backend/ai-service/src/domain/ports/: __init__.py  comment_source.py  conversation_repository.py  post_source.py  vector_store.py
backend/ai-service/src/infrastructure/config/: loader.py  settings.py
backend/ai-service/src/infrastructure/embedding/: gemini_embedder.py
backend/ai-service/src/infrastructure/graph/: neo4j_graph.py
backend/ai-service/src/infrastructure/llm/: prompts.py
backend/ai-service/src/infrastructure/llm/templates/: assistant.jinja
backend/ai-service/src/infrastructure/messaging/: __init__.py  queues.py  rabbitmq.py
backend/ai-service/src/infrastructure/postgres/: __init__.py  comment_source.py  conversation_repository.py  post_source.py
backend/ai-service/src/infrastructure/temporal/: __init__.py  client.py  queues.py
backend/ai-service/src/infrastructure/vector/: schema.py  weaviate_store.py
backend/ai-service/src/interfaces/http/: app.py  deps.py
backend/ai-service/src/interfaces/workers/: ingest_worker.py  temporal_worker.py
backend/ai-service/tests/: conftest.py
backend/ai-service/tests/unit/: test_ingest_activities.py  test_ingest_worker.py  test_post_embedding_input.py  test_post_embedding_workflow.py  test_postgres_post_source.py  test_rag_activities.py  test_rag_chat_workflow.py  test_settings.py  test_weaviate_store.py
(+464 files in other folders)
